--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,12 @@
         <a href="{{ site.facebook }}" class="social-profiles-link"><i class="ion ion-logo-facebook"></i></a>
       </li>
       {% else %} {% endif %}
+      
+      {% if site.youtube %}
+      <li class="social-profiles-item">
+        <a href="{{ site.youtube }}" class="social-profiles-link"><i class="ion ion-logo-youtube"></i></a>
+      </li>
+      {% else %} {% endif %}
 
        {% if site.twitter %}
       <li class="social-profiles-item">
