--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,11 +3,13 @@ layout: default
 ---
 <div class="container">
 	<div class="row">
+		{% if page.image %}
 		<div class="col col-12">
 			<div class="page-image-box">
 				<div class="page-image" style="background-image: url({{"/img/" | prepend: site.baseurl | append : page.image}})"></div>
 			</div>
 		</div>
+		{% endif %}
 		<article class="col col-12 col-t-10 push-t-1 page">
 			<div class="page-content">
 				<div class="page-head">
