--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
   {% endif %}
 
   <div class="widget widget-social">
-    <h3 class="widget-title">Subscribe & Follow</h3>
+    <h3 class="widget-title">Đăng ký & Theo dõi</h3>
     <ul class="social-profiles list-reset">
       {% if site.facebook %}
       <li class="social-profiles-item">
@@ -59,9 +59,9 @@
   </div>
 
   <div class="widget widget-newsletter">
-    <h3 class="widget-title">Newsletter</h3>
-    <div class="newsletter-subtitle">Get Interesting News</div>
-    <div class="newsletter-text">Receive the latest news via email.</div>
+    <h3 class="widget-title">Bài hướng dẫn</h3>
+    <div class="newsletter-subtitle">Đăng ký nhận các bài hướng dẫn mới qua email.</div>
+<!--     <div class="newsletter-text">Đăng ký nhận các bài hướng dẫn mới qua email.</div> -->
     <form class="c-newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}" method="POST"
       id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
       <div class="newsletter-group">
@@ -70,7 +70,7 @@
           <i class="email-icon ion ion-ios-mail"></i>
           <input class="newsletter-email required email" id="mce-EMAIL" type="text" name="EMAIL" placeholder="E-mail">
         </div>
-        <input class="newsletter-button" id="mc-embedded-subscribe" type="submit" name="subscribe" value="Subscribe">
+        <input class="newsletter-button" id="mc-embedded-subscribe" type="submit" name="subscribe" value="Đăng ký">
       </div>
     </form>
   </div>
