--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -15,10 +15,10 @@
   align-items: center;
   .logo-title {
     .logo-text {
-      font-size: 16px;
+      font-size: 20px;
       font-weight: 700;
       line-height: 16px;
-      text-transform: uppercase;
+//       text-transform: uppercase;
       letter-spacing: 5px;
       color: $text;
       &:hover {
