--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -13,10 +13,10 @@
   margin-bottom: 10px;
   border-bottom: 1px solid $border-color;
   .logo-text {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 700;
     line-height: 16px;
-    text-transform: uppercase;
+//     text-transform: uppercase;
     letter-spacing: 5px;
     color: $text;
     &:hover {
