--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -1,9 +1,12 @@
 // Body
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab:300|Roboto:500&subset=vietnamese');
+$base-font-family: 'Roboto Mono', sans-serif;
+
 $base-font-size: 16px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Nunito', sans-serif;
+// $base-font-family: 'Nunito', sans-serif;
 $base-line-height: 28px;
 
 *, *::after, *::before {
