--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -438,9 +438,9 @@
         }
       }
       .menu-link {
-        font-size: 13px;
+        font-size: 16px;
         font-weight: 700;
-        text-transform: uppercase;
+//         text-transform: uppercase;
         line-height: 19px;
         &:before {
           content: none;
