--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -185,6 +185,16 @@
 }
 
 // Articles
+.article-image-first > div:first-child {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: darkslategray;
+    opacity: 0.6;
+}
+
 .article-first {
   margin-bottom: 30px;
   background: $black;
@@ -207,6 +217,7 @@
   .article-content-first {
     padding: 20px;
     color: $text;
+    z-index: 10;
     .article-tag {
       .tag {
         font-size: 12px;
